[package]
name = "runmat-hir"
version = "0.4.4"
edition = "2021"
authors = ["Dystr Team"]
license-file = "../LICENSE.md"
description = "High-level IR for RunMat with type inference and lowering utilities"
homepage = "https://runmat.com"
repository = "https://github.com/runmat-org/runmat"

[dependencies]
runmat-parser = { workspace = true }
runmat-builtins = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
runmat-lexer = { workspace = true }
runmat-runtime = { workspace = true }
runmat-static-analysis = { workspace = true }
tempfile = "3"
