[package]
name = "runmat-ignition"
version = "0.0.14"
edition = "2021"
authors = ["Dystr Team"]
license-file = "../LICENSE.md"

[dependencies]
runmat-builtins = { workspace = true }
runmat-runtime = { workspace = true }
runmat-lexer = { workspace = true }
runmat-parser = { workspace = true }
runmat-hir = { workspace = true }
runmat-gc = { workspace = true }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
runmat-lexer = { workspace = true }

[features]
# Enabling this feature also enables the dependency feature on runmat-runtime
# so the test-only builtins and registry seeders are available.
test-classes = ["runmat-runtime/test-classes"]
