[package]
name = "runmat-ignition"
version = "0.2.7"
edition = "2021"
authors = ["Dystr Team"]
license-file = "../LICENSE.md"
description = "Baseline interpreter for RunMat enabling instant startup and execution"
homepage = "https://runmat.org"
repository = "https://github.com/runmat-org/runmat"

[dependencies]
runmat-builtins = { workspace = true }
runmat-runtime = { path = "../runmat-runtime", version = "=0.2.7", default-features = false }
runmat-accelerate = { workspace = true, optional = true }
runmat-accelerate-api = { workspace = true, optional = true }
runmat-lexer = { workspace = true }
runmat-parser = { workspace = true }
runmat-hir = { workspace = true }
runmat-gc = { workspace = true }
runmat-time = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
log = { workspace = true }
tracing = "0.1"
once_cell = "1"

[dev-dependencies]
runmat-lexer = { workspace = true }
anyhow = { workspace = true }

[features]
default = ["native-accel", "plot-core"]
# Enabling this feature also enables the dependency feature on runmat-runtime
# so the test-only builtins and registry seeders are available.
test-classes = ["runmat-runtime/test-classes"]
native-accel = ["runmat-accelerate", "runmat-accelerate-api"]
plot-core = ["runmat-runtime/plot-core"]
