[package]
name = "runmat-kernel"
version = "0.2.5"
edition = "2021"
authors = ["Dystr Team"]
license-file = "../LICENSE.md"
description = "Jupyter kernel implementation for RunMat using ZeroMQ and the Jupyter protocol"
homepage = "https://runmat.org"
repository = "https://github.com/runmat-org/runmat"

[dependencies]
tokio = { workspace = true }
zmq = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
runmat-hir = { workspace = true }
runmat-ignition = { workspace = true }
runmat-parser = { workspace = true }
runmat-builtins = { workspace = true }
runmat-runtime = { workspace = true }
runmat-repl = { workspace = true }
runmat-snapshot = { workspace = true }
runmat-plot = { workspace = true }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
futures = "0.3"

[features]
default = ["jupyter"]
jupyter = ["runmat-plot/jupyter", "runmat-runtime/jupyter"]

[dev-dependencies]
env_logger = { workspace = true }
tempfile = "3" 
