[package]
name = "runmat-lexer"
version = "0.4.4"
edition = "2021"
authors = ["Dystr Team"]
license-file = "../LICENSE.md"
description = "Lexer for the RunMat language (MATLAB/Octave syntax) built with logos"
homepage = "https://runmat.com"
repository = "https://github.com/runmat-org/runmat"

[dependencies]
logos = { workspace = true }
