[package]
name = "runmat-logging"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry"] }
tracing-log = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
chrono = { version = "0.4", features = ["serde"] }

[features]
default = []
otlp = ["opentelemetry", "opentelemetry-otlp", "tracing-opentelemetry"]

[dependencies.opentelemetry]
version = "0.21"
optional = true
features = ["trace"]

[dependencies.opentelemetry-otlp]
version = "0.14"
optional = true

[dependencies.tracing-opentelemetry]
version = "0.23"
optional = true

