[package]
name = "runmat-lsp"
version = "0.5.0"
edition = "2021"
description = "Language Server Protocol implementation for RunMat editors and tooling"
license-file = "../LICENSE.md"
homepage = "https://runmat.com"
repository = "https://github.com/runmat-org/runmat"

[lib]
name = "runmat_lsp"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "runmat-lsp"
path = "src/main.rs"
required-features = ["native"]

[features]
default = ["native"]
native = ["tokio", "tower-lsp", "env_logger"]
wasm = ["wasm-bindgen"]

[dependencies]
log = { workspace = true }
env_logger = { workspace = true, optional = true }
runmat-parser = { workspace = true }
runmat-hir = { workspace = true }
runmat-mir = { workspace = true }
runmat-builtins = { workspace = true }
runmat-lexer = { workspace = true }
runmat-vm = { workspace = true }
runmat-config = { workspace = true }
runmat-filesystem = { workspace = true }
runmat-runtime = { workspace = true }
runmat-static-analysis = { workspace = true }
runmat-thread-local = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, optional = true, features = ["io-std", "io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tower-lsp = { workspace = true, optional = true }
once_cell = { workspace = true }
futures = "0.3"
wasm-bindgen = { version = "0.2", optional = true, features = ["serde-serialize"] }
lsp-types = "0.94"

[target.'cfg(target_arch = "wasm32")'.dependencies]
serde-wasm-bindgen = "0.6"
wasm-bindgen-futures = "0.4"
runmat-runtime = { workspace = true, features = ["plot-web"] }

# Keep wasm-opt enabled while avoiding a Binaryen precompute crash seen on Windows.
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--skip-pass=precompute"]
