[package]
name = "runmat-macros"
version = "0.0.1"
edition = "2021"
authors = ["Dystr Team"]
license-file = "../LICENSE.md"

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
inventory = { workspace = true }
runmat-builtins = { workspace = true }

[dev-dependencies]
trybuild = "1"
