[package]
name = "runmat-macros"
version = "0.2.8"
edition = "2021"
authors = ["Dystr Team"]
license-file = "../LICENSE.md"
description = "Procedural macros for declaring RunMat builtins and utilities"
homepage = "https://runmat.org"
repository = "https://github.com/runmat-org/runmat"

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
inventory = { workspace = true }
runmat-builtins = { workspace = true }

[dev-dependencies]
trybuild = "1"
