[package]
name = "runmat-mir"
version = "0.4.1"
edition = "2021"
authors = ["Dystr Team"]
license-file = "../LICENSE.md"
description = "Mid-level IR and analysis scaffolding for RunMat"
homepage = "https://runmat.com"
repository = "https://github.com/runmat-org/runmat"

[dependencies]
runmat-hir = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
