[package]
name = "runmat-mir"
version = "0.5.6"
edition = "2021"
authors = ["Dystr Team"]
license-file = "../LICENSE.md"
description = "Mid-level IR and analysis scaffolding for RunMat"
homepage = "https://runmat.com"
repository = "https://github.com/runmat-org/runmat"

[dependencies]
runmat-builtins = { workspace = true }
runmat-hir = { workspace = true }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
runmat-parser = { workspace = true }
serde_json = "1.0"
