[package]
name = "runmat-parser"
version = "0.0.3"
edition = "2021"
authors = ["Dystr Team"]
license-file = "../LICENSE.md"

[dependencies]
runmat-lexer = { workspace = true }
logos = { workspace = true }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
runmat-lexer = { workspace = true }
