[package]
name = "runmat-parser"
version = "0.2.1"
edition = "2021"
authors = ["Dystr Team"]
license-file = "../LICENSE.md"
description = "Parser for RunMat (MATLAB/Octave) producing HIR from token streams"
homepage = "https://runmat.org"
repository = "https://github.com/runmat-org/runmat"

[dependencies]
runmat-lexer = { workspace = true }
logos = { workspace = true }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
runmat-lexer = { workspace = true }
