[package]
name = "runmat-parser"
version = "0.2.8"
edition = "2021"
authors = ["Dystr Team"]
license-file = "../LICENSE.md"
description = "Parser for RunMat (MATLAB/Octave) producing HIR from token streams"
homepage = "https://runmat.com"
repository = "https://github.com/runmat-org/runmat"

[dependencies]
runmat-lexer = { workspace = true }
logos = { workspace = true }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
runmat-lexer = { workspace = true }
