[package]
name = "runmat-repl"
version = "0.2.2"
edition = "2021"
authors = ["Dystr Team"]
license-file = "../LICENSE.md"
description = "Interactive RunMat REPL with line editing and Jupyter kernel integration"
homepage = "https://runmat.org"
repository = "https://github.com/runmat-org/runmat"

[dependencies]
runmat-lexer = { workspace = true }
runmat-parser = { workspace = true }
runmat-hir = { workspace = true }
runmat-ignition = { workspace = true }
runmat-runtime = { workspace = true }
runmat-accelerate = { workspace = true }
runmat-turbine = { workspace = true }
runmat-gc = { workspace = true }
runmat-builtins = { workspace = true }
runmat-snapshot = { workspace = true }
rustyline = "14.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
