[package]
name = "runmat-repl"
version = "0.2.7"
edition = "2021"
authors = ["Dystr Team"]
license-file = "../LICENSE.md"
description = "Interactive RunMat REPL with line editing and Jupyter kernel integration"
homepage = "https://runmat.org"
repository = "https://github.com/runmat-org/runmat"

[dependencies]
runmat-core = { version = "=0.2.7", path = "../runmat-core", default-features = false }
runmat-accelerate = { workspace = true }
runmat-gc = { workspace = true }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"

[features]
default = ["jit"]
jit = ["runmat-core/jit"]
