[package]
name = "runmat-runtime-integration-tests"
version = "0.3.0"
edition = "2021"
publish = false
description = "Integration test suite for the RunMat runtime and acceleration backends"

[dependencies]
runmat-runtime = { path = "../runmat-runtime", features = ["wgpu"] }
runmat-accelerate = { path = "../runmat-accelerate", features = ["wgpu"] }
runmat-accelerate-api = { workspace = true }
runmat-builtins = { path = "../runmat-builtins" }
runmat-macros = { path = "../runmat-macros" }
inventory = { workspace = true }
futures = "0.3"
