[package]
name = "runmat-snapshot"
version = "0.2.7"
edition = "2021"
authors = ["Dystr Team"]
description = "High-performance snapshot creator for preloading RunMat standard library"
license-file = "../LICENSE.md"
keywords = ["matlab", "octave", "snapshot", "serialization", "performance"]
categories = ["science", "development-tools", "compilers"]

[features]
default = ["compression-native", "compression-wasm", "validation"]
compression = []
compression-native = ["compression", "dep:lz4", "dep:zstd"]
compression-wasm = ["compression", "dep:lz4_flex", "dep:ruzstd"]
validation = ["sha2", "blake3", "crc32fast"]
blas-lapack = ["runmat-runtime/blas-lapack"]

[dependencies]
runmat-builtins = { workspace = true }
runmat-runtime = { path = "../runmat-runtime", version = "=0.2.7", default-features = false }
runmat-hir = { workspace = true }
runmat-ignition = { workspace = true }
runmat-parser = { workspace = true }
runmat-gc = { workspace = true }
runmat-filesystem = { workspace = true }
runmat-time = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
anyhow = "1.0"
log = "0.4"
thiserror = "1.0"

# Validation support  
sha2 = { version = "0.10", optional = true }

# Atomic operations for thread safety
parking_lot = "0.12"

# Progress reporting
indicatif = "0.17"

# CLI framework
clap = { version = "4.4", features = ["derive"] }

# Logging and time utilities
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.10"

# Additional hash algorithms
blake3 = { version = "1.5", optional = true }
crc32fast = { version = "1.3", optional = true }

# System information
libc = "0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"
env_logger = "0.10"



[[bin]]
name = "runmat-snapshot-tool"
path = "src/bin/tool.rs"

[lib]
name = "runmat_snapshot"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
memmap2 = "0.9"
tokio = { version = "1.0", features = ["full"] }
lz4 = { version = "1.24", optional = true }
zstd = { version = "0.13", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
lz4_flex = { version = "0.12", optional = true }
ruzstd = { version = "0.8", optional = true, default-features = false, features = ["std"] }
getrandom = { version = "0.2", features = ["js"] }
