[package]
name = "runmat-static-analysis"
version = "0.5.2"
edition = "2021"
authors = ["Dystr Team"]
license-file = "../LICENSE.md"
description = "Domain-specific static analysis passes for RunMat"
homepage = "https://runmat.com"
repository = "https://github.com/runmat-org/runmat"

[dependencies]
runmat-hir = { workspace = true }
runmat-mir = { workspace = true }
runmat-builtins = { workspace = true }
runmat-parser = { workspace = true }

[dev-dependencies]
runmat-runtime = { workspace = true }
